[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/sprites/UI/left.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/font_16x.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/UpgradeMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="UpgradeMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 720.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeMenuTitle" type="Label" parent="."]
margin_left = 13.0
margin_top = 72.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Available Upgrades:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeList" type="ItemList" parent="."]
margin_left = 13.0
margin_top = 96.0
margin_right = 307.0
margin_bottom = 707.0
custom_styles/bg = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
items = [ "Base - Oxygen Capacity", null, false, "Base - Oxygen Generator", null, false, "Base - Additional Turret", null, false, "Base - Turret Strength", null, false, "Base - Armor", null, false, "Base - Repair Crew", null, false, "Ship  - Speed", null, false, "Ship  - Oxygen Capacity", null, false, "Ship  - Fuel Tank Size", null, false, "Ship  - Weapon Strength", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="."]
margin_left = 13.0
margin_top = 13.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Remaining Oxygen: 42
Remaining Metal: 42"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_activated" from="UpgradeList" to="." method="_on_UpgradeList_item_activated"]
